# DigitalImperium

./: CMakeLists.txt  README.md  main.cpp
backend/include/: ability.hpp  actionCard.hpp  agendaCard.hpp  culturalExplorationCard.hpp  darkMatterExplorationCard.hpp  directions.hpp  enchantmentCard.hpp  explorationCard.hpp  explorationType.hpp  hazardousExplorationCard.hpp  industrialExplorationCard.hpp  mainGame.hpp  objectiveCard.hpp  phases.hpp  planet.hpp  player.hpp  promissoryNoteCard.hpp  relicCard.hpp  strategyCard.hpp  systemTile.hpp  systemTileType.hpp  technologyCard.hpp  technologyRequirements.hpp  technologyType.hpp  trait.hpp  unitUpgradeCard.hpp
backend/include/factions/: faction.hpp  unitsDetails.hpp
backend/include/races/: race.hpp  unitsDetails.hpp
backend/include/units/: unit.hpp
backend/include/units/abilities/: ability.hpp  antiFighterBarrage.hpp  bombardment.hpp  planetaryShield.hpp  production.hpp  spaceCannon.hpp  sustainDamage.hpp
backend/include/units/buildings/: building.hpp  psd.hpp  spaceDock.hpp
backend/include/units/groundUnits/: groundUnit.hpp  infantry.hpp  mech.hpp
backend/include/units/ships/: Carrier.hpp  Cruiser.hpp  Destroyer.hpp  Dreadnought.hpp  Fighter.hpp  Flagship.hpp  Ship.hpp  WarSun.hpp
backend/source/: mainGame.cpp
gui/qml/: main.qml
gui/resources/translations/: DigitalImperium_pl_PL.ts
